--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ slide-scroll
 
 <section class="about section" id="about">
     <div class="container">
-      <h2 class="title">ABOUT</h2>
+      <h2 class="title">SKILL</h2>
       <div class="profile">
         <div class="profile-body">
           <p>
@@ -167,7 +167,7 @@ slide-scroll
 <div class="experience"></div>
 <section class="about section" id="about">
     <div class="container">
-      <h2 class="title">ABOUT</h2>
+      <h2 class="title">EXPERIENCE</h2>
       <div class="profile">
         <div class="profile-body">
           <p>
@@ -194,14 +194,11 @@ slide-scroll
 <div class="work"></div>
 <section class="about section" id="about">
     <div class="container">
-      <h2 class="title">ABOUT</h2>
+      <h2 class="title">WORK</h2>
       <div class="profile">
         <div class="profile-body">
           <p>
-            前職では、契約ユーザーとの関係構築に始まり、ユーザーの目標利用開始時期に沿ったスケジュールを即座に提案し定期的にフォロー電話をしておりました。
-          </p>
-          <p>
-           チーム内目標以上の結果を個人で達成するだけでなく、多くのメンバーとコミュニケーションをとることで多くの知見を得ることができ、また得た知見をユーザーとの会話に反映させることで関係構築が深まりました。こういった経験を活かし、コミュニケーション能力も武器にエンジニアとして成長していきたいと考えております。
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
       </div>
