--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="container">
         <div class="opening">
             <span class="opening__mask"></span>
-            <img class="opening__logo" src="img/opening_logo.png" alt="">
+            <img class="opening__logo" src="img/opening-logo1.png" alt="">
         </div>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
