--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <g>
                     <use xlink:href="#circlePath" fill="none"/>
                     <text fill="#272727">
-                        <textPath xlink:href="#circlePath">Let'go Scroll down. Thanks for coming.</textPath>
+                        <textPath xlink:href="#circlePath">Scroll down. Scroll down. Scroll down.</textPath>
                     </text>
                 </g>
             </svg>
@@ -106,7 +106,7 @@ scroll-text
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/CustomEase.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="scroll-text.js"></script>
+    <script src="scroll-text1.js"></script>
     
 <!-----------------------------------
 scroll-sticky
@@ -127,7 +127,7 @@ scroll-sticky
 
 <!-----------------------------------
 slide-scroll
-------------------------------------->
+
 <div class="fv">
     
 </div>
@@ -147,6 +147,9 @@ slide-scroll
         </section>
     </div>
 </div>
+------------------------------------->
+
+<div class="container-border-radius"></div>
 
 <!-----------------------------------
 text-animation
@@ -156,33 +159,69 @@ text-animation
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="01">Skill</p>
       <h2 class="title__jp js-text-effect">スキル</h2>
-      <div class="section"></div>
+      <div class="section-explain">
+        <p class="scroll-text wipeAnimation2">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        </p>
+        <p class="scroll-text wipeAnimation2">
+          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+        </p>
+      </div>
   </div>
 </section>
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="02">About</p>
       <h2 class="title__jp js-text-effect">わたしについて</h2>
-      <div class="section">
+      <div class="title section-explain">
+        <p class="scroll-text wipeAnimation3">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        </p>
+        <p class="scroll-text wipeAnimation3">
+          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+        </p>
+      </div>
+      </div>
   </div>
 </section>
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="03">Experience</p>
       <h2 class="title__jp js-text-effect">経験してきたこと</h2>
-      <div class="section"></div>
+      <div class="section-explain">
+        <p class="scroll-text wipeAnimation4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        </p>
+        <p class="scroll-text wipeAnimation4">
+          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+        </p>
+      </div>
+      </div>
   </div>
 </section>
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="04">Work</p>
       <h2 class="title__jp js-text-effect">制作実績</h2>
-      <div class="section"></div>
+      <div class="section-explain">
+        <p class="scroll-text wipeAnimation5">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        </p>
+        <p class="scroll-text wipeAnimation5">
+          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+        </p>
+      </div>
+      </div>
   </div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
 <script src="text-animation.js"></script>
+<script src="scroll-text2.js"></script>
+<script src="scroll-text3.js"></script>
+<script src="scroll-text4.js"></script>
+<script src="scroll-text5.js"></script>
+
   
 <footer class="footer">
     footer
