--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+<!-----------------------------------
+opening-animation
+------------------------------------->
     <main class="container">
         <div class="opening">
             <span class="opening__mask"></span>
@@ -36,7 +40,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="opening-animation.js"></script>
       </main>  
-    <!-----------------------------------
+<!-----------------------------------
 progress-bar    
 ------------------------------------->
     <progress class="scroll-indicator" max="100" value=""></progress>
@@ -161,13 +165,15 @@ text-animation
       <h2 class="title__jp js-text-effect">スキル</h2>
       <div class="section-explain">
         <p class="scroll-text wipeAnimation2">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          In addition to the skills necessary to create a website, I have many skills based on various experiences. Please check "more..." for details. 
         </p>
         <p class="scroll-text wipeAnimation2">
-          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+          Webサイト作成に必要なスキルだけでなく、様々な経験をもとに多くのスキルを持っています。詳しくは"more..."をご確認ください。
         </p>
+        <a href="skill.html" class="btnarrow4"> more ... </a>
+        </div>
       </div>
-  </div>
+    </div>
 </section>
 <section class="section">
   <div class="title js-text-effect-trigger">
@@ -175,15 +181,17 @@ text-animation
       <h2 class="title__jp js-text-effect">わたしについて</h2>
       <div class="title section-explain">
         <p class="scroll-text wipeAnimation3">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          I challenge many things, I have an excellent drawer among my age group. Please see "more..." for more information.
         </p>
         <p class="scroll-text wipeAnimation3">
-          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+          多くのことに挑戦しているので、同年代の中では秀でた引き出しを持っています。詳しくは"more..."をご確認ください。
         </p>
+        <a href="about.html" class="btnarrow4"> more ... </a>
       </div>
       </div>
   </div>
 </section>
+<!--
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="03">Experience</p>
@@ -195,21 +203,24 @@ text-animation
         <p class="scroll-text wipeAnimation4">
           これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
         </p>
+        <a href="experience.html" class="btnarrow4"> more ... </a>
       </div>
       </div>
   </div>
 </section>
+-->
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="04">Work</p>
       <h2 class="title__jp js-text-effect">制作実績</h2>
       <div class="section-explain">
         <p class="scroll-text wipeAnimation5">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          We publish the works. I am aware that there are pictures that can be taken because design is a daily routine. Please see "more..." for more information.
         </p>
         <p class="scroll-text wipeAnimation5">
-          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
+          作品を掲載しております。 デザインが日課だからこそ撮れる写真があると自覚しています。 詳しくは"more..."をご確認ください。
         </p>
+        <a href="work.html" class="btnarrow4"> more ... </a>
       </div>
       </div>
   </div>
