--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-work.css">
+    <link rel="stylesheet" href="css/style-work.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,51 +17,51 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-<script src="opening-animation-work.js"></script>
+<script src="js/opening-animation-work.js"></script>
 
     <section>
         <h1>Welcome to my work station. Photoed by me.</h1>
       
-        <h2 class="credit"><a href="index.html" target="_blank">Go to HOME.</a></h2>
+        <h2 class="credit"><a href="index.html" target="_blank">Back to HOME.</a></h2>
       </section>
       
       <div class="gallery">
         <div class="col">
           <div class="image">
+            <img src="img/IMG_8741.JPG" alt="">
+          </div>
+          <div class="image">
+            <img src="img/IMG_8742.JPG" alt="">
+          </div>
+          <div class="image">
             <img src="img/20220402-DSCF3004-2.jpg" alt="">
-          </div>
-          <div class="image">
-            <img src="img/20220503-DSCF3802.jpg" alt="">
-          </div>
-          <div class="image">
-            <img src="img/EDD7E323-DFC4-46F8-89DC-D78EEF6E73DE-6335-000001E5A9A2851D.jpg" alt="">
           </div>
         </div>
         <div class="col">
           <div class="image">
-            <img src="img/20220402-DSCF3004-2.jpg" alt="">
+            <img src="img/IMG_8744.JPG" alt="">
           </div>
           <div class="image">
-            <img src="img/EC8251DC-8E7C-43A3-AE51-CD1371D7C1BC.jpg" alt="">
+            <img src="img/IMG_8745.JPG" alt="">
           </div>
           <div class="image">
-            <img src="img/20220503-DSCF3821.jpg" alt="">
+            <img src="img/IMG_8746.JPG" alt="">
           </div>
         </div>
         <div class="col">
           <div class="image">
-            <img src="img/20220923-DSCF5996-2.jpg" alt="">
+            <img src="img/IMG_8747.JPG" alt="">
           </div>
           <div class="image">
-            <img src="img/20220709-DSCF4788.jpg" alt="">
+            <img src="img/IMG_8748.JPG" alt="">
           </div>
           <div class="image">
-            <img src="img/B6980B4E-3C9B-496B-A795-3FA235520197-9834-00000429073149D8.jpg" alt="">
+            <img src="img/IMG_8749.JPG" alt="">
           </div>
         </div>
       </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-        <script src="skill1.js"></script>
+        <script src="js/work.js"></script>
 </body>
 </html>
