--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -38,7 +38,7 @@ opening-animation
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="opening-animation.js"></script>
+    <script src="js/opening-animation.js"></script>
       </main>  
 <!-----------------------------------
 progress-bar    
@@ -63,20 +63,18 @@ menu-content
             </svg>
         </button>
         <div class="header-menu">
-            <ul class="header-lists">
-                <li>about</li>
-                <li>experience</li>
-                <li>skill</li>
-                <li>news</li>
-                <li>contact</li>
-            </ul>
+            <a href="about.html" class="header-lists"> ABOUT</a>
+            <a href="skill.html" class="header-lists"> SKILL</a>
+            <a href="work.html" class="header-lists"> WORK </a>
+            <a href="index.html" class="header-lists"> HOME </a>
+            
             <span class="circle-bg"></span>
         </div>
     </header>
 
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-<script src="menu-content.js"></script>
+<script src="js/menu-content.js"></script>
 
 <!-----------------------------------
 loop-text
@@ -110,7 +108,7 @@ scroll-text
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/CustomEase.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="scroll-text1.js"></script>
+    <script src="js/scroll-text1.js"></script>
     
 <!-----------------------------------
 scroll-sticky
@@ -127,7 +125,7 @@ scroll-sticky
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="scroll-sticky.js"></script>
+    <script src="js/scroll-sticky.js"></script>
 
 <!-----------------------------------
 slide-scroll
@@ -191,24 +189,6 @@ text-animation
       </div>
   </div>
 </section>
-<!--
-<section class="section">
-  <div class="title js-text-effect-trigger">
-      <p class="title__en js-text-effect" id="03">Experience</p>
-      <h2 class="title__jp js-text-effect">経験してきたこと</h2>
-      <div class="section-explain">
-        <p class="scroll-text wipeAnimation4">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        </p>
-        <p class="scroll-text wipeAnimation4">
-          これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。これは、ダミーです。
-        </p>
-        <a href="experience.html" class="btnarrow4"> more ... </a>
-      </div>
-      </div>
-  </div>
-</section>
--->
 <section class="section">
   <div class="title js-text-effect-trigger">
       <p class="title__en js-text-effect" id="04">Work</p>
@@ -227,11 +207,11 @@ text-animation
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-<script src="text-animation.js"></script>
-<script src="scroll-text2.js"></script>
-<script src="scroll-text3.js"></script>
-<script src="scroll-text4.js"></script>
-<script src="scroll-text5.js"></script>
+<script src="js/text-animation.js"></script>
+<script src="js/scroll-text2.js"></script>
+<script src="js/scroll-text3.js"></script>
+<script src="js/scroll-text4.js"></script>
+<script src="js/scroll-text5.js"></script>
 
   
 <footer class="footer">
@@ -239,7 +219,7 @@ text-animation
 </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="slide-scroll.js"></script>
+    <script src="js/slide-scroll.js"></script>
 
 
 </body>
