--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-about.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,12 +41,6 @@ opening-animation
     <script src="js/opening-animation.js"></script>
       </main>  
 <!-----------------------------------
-progress-bar    
-------------------------------------->
-    <progress class="scroll-indicator" max="100" value=""></progress>
-
-
-<!-----------------------------------
 menu-content  
 ------------------------------------->
 <section class="menu-container">
@@ -75,6 +69,23 @@ menu-content
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 <script src="js/menu-content.js"></script>
+
+
+<div class="main">
+	<div class="wrap">
+		<div class="textHolder">
+			<span>Atsuya Osaki</span>
+		</div>
+		<div class="contentHolder">
+			<h1>About</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+<script src="js/about-card.js"></script>
+
+<h2 class="credit"><a href="index.html" target="_blank">Back to HOME.</a></h2>
 
 </body>
 
