--- a/skill.html
+++ b/skill.html
@@ -12,7 +12,8 @@
 />
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <title>Document</title>
+<link rel="icon" href="img/icon_logo.png">
+    <title>Skill_Atsu</title>
 </head>
 <body>
 
