--- a/skill.html
+++ b/skill.html
@@ -355,7 +355,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class="col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531888-a5892402adce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" alt="">
+					<img src="img/skill/gas_logo.png" alt="">
 				</div>
 				<div class="col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -367,7 +367,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class=" col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531768-4ce3fb0b07fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" alt="">
+					<img src="img/skill/backlog_logo.png" alt="">
 				</div>
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -379,7 +379,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class=" col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531580-652231dae097?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=513&q=80" alt="">
+					<img src="img/skill/miro_logo.png" alt="">
 				</div>
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -391,7 +391,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class="col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531888-a5892402adce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" alt="">
+					<img src="img/skill/office_logo.png" alt="">
 				</div>
 				<div class="col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -403,7 +403,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class=" col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531768-4ce3fb0b07fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" alt="">
+					<img src="img/skill/SpreadSheet_logo.png" alt="">
 				</div>
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -415,7 +415,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class=" col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531580-652231dae097?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=513&q=80" alt="">
+					<img src="img/skill/Github_logo.png" alt="">
 				</div>
 				<div class=" col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
@@ -427,7 +427,7 @@ menu-content
 		<div class="swiper-slide">
 			<div class="row display-1">
 				<div class="col-5 col-sm-5 picture m0">
-					<img src="https://images.unsplash.com/photo-1553531888-a5892402adce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80" alt="">
+					<img src="img/skill/line_logo.png" alt="">
 				</div>
 				<div class="col-7 col-sm-7  detail">
 					<h5>Loremipsum dolor sit amet</h5>
