--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ text-animation
     <section class="container double">
       <div class="inner-container">
           <div class="container-text">
-              <h1>I'm looking for companies that can work with me to create a successful experience for clients.</h1>
+              <h1>I'm looking for a company that can work with me to create a successful experience for clients.</h1>
           </div>
           <div class="row--top">
               <section class="panel behind width--thin height--short direction--right">
@@ -372,13 +372,47 @@ text-animation
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
 	  <script src="js/index-summary.js"></script>
-  
-<footer class="footer">
-    footer
-</footer>
+
+
+    <div class="spacer"></div>
+    <p class="text js-move-text">
+      Thank you for seeing it through to the end. <span class="">Appreciate</span> .<br>
+      I promise <span class="">to be active</span> in your company.<br>
+      <img src="img/me.png" alt="">
+    </p>
+    <div class="spacer">
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="js/slide-scroll.js"></script>
+    <script src="js/before-footer.js"></script>
+
+
+    <footer class="footer">
+      <div class="md-flex md-justify-between">
+        <a href="" class="footer__logo">
+          <img src="img/footer.png" width="300" height="250" alt="Logo" />
+        </a>
+        <div class="grid">
+          <div>
+            <p class="footer__navi-heading">ME</p>
+            <ul class="footer__navi">
+              <li><a href="skill.html">Skill</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="work.html">Work</a></li>
+            </ul>
+          </div>
+          <div>
+            <p class="footer__navi-heading">FOLLOW ME</p>
+            <ul class="footer__navi">
+              <li><a href="https://www.instagram.com/bokuno.monogatari/?hl=ja">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p class="copyright">© 2023 <a href="">Atsu Portfolio.</a> All Rights Reserved.
+      </p>
+    </footer>
 
 
 </body>
